--- a/DD/Files/interface.tex
+++ b/DD/Files/interface.tex
@@ -40,7 +40,7 @@ The corresponding page for educators will show basic similar information about t
     \includegraphics[width=0.8\textwidth]{Mockups/6_educator_create_tournament.png}
     \caption{Page used from educators to create a new tournament}
 \end{figure}
-The tournament page offers to the educator owning the tournament the possibility to manage it. He will be able to click the "Add collaborator" button to add another educator to the tournament by email address. Moreover, the page offers the "collaborators" tab that can be used to check and manage the list of collaborators. The last tab called "leaderboard" allows the educator to check the ranking of the students enrolled in the tournament. However, the main tournament page contains the list of all the battles created within the tournament.  By clicking on a specific battle, the educator will be redirected to the battle's page. Most importantly, the educator can create a battle by clicking on "Create battle" button.\\
+The tournament page offers to the educator owning the tournament the possibility to manage it. He will be able to click the "Add collaborator" button to add another educator to the tournament by email address. Moreover, the page offers the "collaborators" tab that can be used to check and manage the list of collaborators. The last tab called "leaderboard" allows the educator to check the ranking of the students enrolled in the tournament. The main tournament page contains the list of all the battles created within the tournament.  By clicking on a specific battle, the educator will be redirected to the battle's page. Most importantly, the educator can create a battle by clicking on "Create battle" button.\\
 The student's tournament page will share most of the content, but the options to manage the tournament. The same page, if the tournament is not started yet, offers the possibility to the student to subscribe to the tournament and by default shows a list of partipants. \\
 \begin{figure}[H]
     \centering
@@ -50,7 +50,7 @@ The student's tournament page will share most of the content, but the options to
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{Mockups/8_educator_tournament_leaderboard.png}
-    \caption{"leaderboard" tab available to both educators and students to check the ranking in tournament}
+    \caption{"Leaderboard" tab available to both educators and students to check the ranking in tournament}
 \end{figure}
 \begin{figure}[H]
     \centering
