--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -1,13 +1,14 @@
 \subsection{External Interface Requirements}
+
 \subsubsection{User Interfaces}
-The platform will provide a web interface accessible via browser from both students and educators. In this section, mockups of the most important functionalities of the website will be presented. A complete description of the webapp will be provided in the Design Document.\\
+The platform will provide a web interface accessible via browser from both students and educators. In this section, mockups of the most important functionalities of the website will be presented. A complete description of the webapp will be provided in the Design Document.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{Mockups/3_student_homepage.png}
     \caption{Home page from the perspective of an user logged as student}
     \label{fig:student_homepage}
 \end{figure}
-The figure \ref{fig:student_homepage} shows the home page of the CKB website as it appears to a student. It contains different information depending on the user's role. In particular, the student can see the list of all tournaments and battles he is participating in and a calendar showing upcoming deadlines.
+The picture above shows the home page of the CKB website. It contains different information depending on the role of the user who is visiting it: Figure \ref{fig:student_homepage} in particular presents the home page as it appears to a student. It displays the list of all tournaments and battles the student is participating in and a calendar showing upcoming deadlines.
 
 The educator's version of the page shows instead the list of all tournaments and battles he is managing.
 \begin{figure}[H]
@@ -20,11 +21,11 @@ The tournaments section contains the list of all past, ongoing and upcoming tour
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{Mockups/8_educator_tournament_leaderboard.png}
-    \caption{"leaderboard" tab available to both educators and students to check the ranking in tournament}
+    \caption{"Leaderboard" tab available to both educators and students to check the ranking in tournament}
     \label{fig:leaderboard}
 \end{figure}
 
-The tournament page allows the users to visualize the personal rank of students participating in it. The figure \ref{fig:leaderboard} shows in particular how the leaderboard will be displayed to an educator.
+The tournament page allows the users to visualize the personal rank of students participating in it. Figure \ref{fig:leaderboard} shows in particular how the leaderboard will be displayed to an educator.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{Mockups/10_educator_create_battle.png}
