added details on verification document, external static analysis tools, alloy comments and added system timestamp modelling

--- a/RASD/Files/alloy.tex
+++ b/RASD/Files/alloy.tex
@@ -1,3 +1,7 @@
+An Alloy model is provided to present a formal description of the system. 
+The goals of this kind of analysis are to check the consistency of the model and to find possible errors and corner cases in the requirements.\\
+A formal model is also useful to express complex facts which are not captured by the domain class diagram such as the constraints involving subcriptions, scores, timestamps, battle and tournament states.\\
+
 \subsection{Model Code}
 \begin{lstlisting}[language=alloy]
 open util/integer
