--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -19,7 +19,7 @@
 \newpage
 \textbf{ Additional notes on the class diagram:}
 \begin{itemize}
-    \item the "proofDocument" attribute of the "Educator" class contains a reference to the file through which the educator was verified.
+    \item the "proofDocument" attribute of the "Educator" class contains a reference to the file through which the educator was verified. The educator verification process will not be described in this document, as it is not a functionality that directly involves the end-users of the system.
     \item the "battleScore" attribute of the Team entity contains the overall score of the latest submission. This is the score that is used to compute the rank of teams participating in the battle.
 \end{itemize}
 
