--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -56,7 +56,7 @@ The software does not require any other hardware interface different than person
 Some of the functionalities provided by the system exploit specific interfaces to work. These are:
 \begin{itemize}
     \item \textbf{GitHub interface}: the system must be able to interface with GitHub API to create the original repository for each battle and to pull code submissions.
-    \item \textbf{Static analysis tools}: some of the aspects that have to be evaluated require the execution of some static analysis method over the provided code. In this case, the platform utilizes external services directly provided by third-party organizations. The external services must support the set of languages supported by CKB the platform.
+    \item \textbf{Static analysis tools}: some of the aspects that have to be evaluated require the execution of static analysis methods over the provided code. System achieves this by interfacing with external tools that provide this functionality. These services must support the set of languages allowed by the CKB platform and the analysis of specific code quality aspects such as security, maintainability and reliability.
 \end{itemize}
 Each of these interfaces are implemented by correctly setting and utilizing specific API calls to the involved services that will be included inside the platform’s inner processes.
 
