--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -92,7 +92,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \end{tabular}
     \caption{Phenomena table}
 \end{table}
-\newpage
+
 \subsection{Definitions, Acronyms, Abbreviations}
 \subsubsection{Definitions}
 \begin{itemize}
@@ -139,7 +139,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
 \end{itemize}
 \subsection{Revision History}
 \begin{itemize}
-    \item December 22, 2023: version 1.0 (first release)
+    \item \today: version 1.0 (first release)
 \end{itemize}
 \subsection{Reference Documents}
 \begin{itemize}
