missed a newpage previously existing

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -93,6 +93,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \caption{Phenomena table}
 \end{table}
 
+\newpage
 \subsection{Definitions, Acronyms, Abbreviations}
 \subsubsection{Definitions}
 \begin{itemize}
