added header and footer to rasd

--- a/RASD/Files/alloy.tex
+++ b/RASD/Files/alloy.tex
@@ -519,6 +519,7 @@ check AllTeamsManuallyEvaluated for 4
 The alloy model previously presented focuses on the most important entities and attributes of the domain, which are strictly necessary to describe the main functionalities of the system. Indeed, some concepts such as time and scores have been simplified to be easily handled by the Alloy Analyzer and syntax.\\
 Images of three world examples are shown below, the first focuses on educators, tournaments and battles, while the second and the third ones include all the aspects related to students, teams and submissions.
 \newpage
+\thispagestyle{noheader}
 
 \begin{figure}[H]
     \vspace{-2cm}
@@ -527,14 +528,20 @@ Images of three world examples are shown below, the first focuses on educators, 
     \vspace{0.2cm}
     \caption{World1, generated with the \textit{world1} predicate}
 \end{figure}
+
 \newpage
+\thispagestyle{noheader}
+
 \begin{figure}[H]
     \centering
     \vspace{-4cm}
     \includegraphics[width=1.65\textwidth,angle=90,origin=c]{Alloy/world2.png}
     \caption{World2, generated with the \textit{world2} predicate}
 \end{figure}
+
 \newpage
+\thispagestyle{noheader}
+
 \begin{figure}[H]
     \centering
     \vspace{-4cm}
