--- a/RASD/rasd.tex
+++ b/RASD/rasd.tex
@@ -1,4 +1,23 @@
 \documentclass[table, 12pt]{article}
+
+% Preamble additions
+\usepackage{fancyhdr} 
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[L]{\slshape\rightmark}
+\fancyhead[R]{\slshape\leftmark}
+\fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{RASD}}
+\fancyfoot[R]{\thepage}
+\renewcommand{\footrulewidth}{0.4pt}
+
+\fancypagestyle{noheader}{
+  \fancyhf{} 
+  \renewcommand{\headrulewidth}{0pt} % no header
+  \fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{RASD}}
+  \fancyfoot[R]{\thepage}
+  \renewcommand{\footrulewidth}{0.4pt}
+}
+
 \usepackage{graphicx}
 \usepackage[T1]{fontenc}
 \usepackage{tocloft}
@@ -62,14 +81,6 @@
 \pagenumbering{arabic}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
-%\newpage
-%\addcontentsline{toc}{section}{Table of Contents}
-%\tableofcontents
-%\newpage
-%\addcontentsline{toc}{section}{List of Figures}
-%\listoffigures
-%\addcontentsline{toc}{section}{List of Tables}
-%\listoftables
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
