fixed RASD layout

--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -136,6 +136,7 @@ The main requirements the system has to fulfill are the following:
     \caption{Shared scenarios use case diagram}
 \end{figure}
 \begin{center}
+    \hspace{-5px}
     \begin{tabular}{ |c|m{10cm}| }
         \hline
         \textbf{ID} & UC1 \\
