uploaded deployment diagram image

--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -12,7 +12,6 @@ Incorporating these key properties into the CodeKataBattle system should provide
 
 \subsection{Definitions, Acronyms, Abbreviations}
 TODO: remove unused ones
-
 \subsubsection{Definitions}
 \begin{itemize}
     \item {\textbf{User:} anyone that has registered to the platform}
@@ -59,7 +58,9 @@ TODO: remove unused ones
 \end{itemize}
 
 \subsection{Revision History}
-TODO
+\begin{itemize}
+    \item \today: version 1.0 (first release)
+\end{itemize}
 
 \subsection{Reference Documents}
 \begin{itemize}
@@ -70,7 +71,6 @@ TODO
 \end{itemize}
 
 \subsection{Document Structure}
-TODO: check if this is enough
 \begin{itemize}
     \item \textbf{Section 1: Introduction}\\ In this section a general description of the document and the system to be developed is provided, also including a glossary of terms used and a list of reference documents.
     \item \textbf{Section 2: Architectural Design}\\ Here the high-level structure of the software is outlined. This includes the identification of major components, their interactions, and the overall flow of data within the system. Dependencies on external factors or third-party integrations are also detailed, offering a comprehensive view of the software's architecture.
