--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -107,9 +107,16 @@ The Figure \ref{component_diagram} contains also some external entities the syst
     \item \textbf{SSO}: used by the system to offer the users the possibility to signup and login with their preferred identity provider.
 \end{itemize}
 
-
-
+\newpage
 \subsection{Deployment view}
+TODO
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.3\textwidth,angle=90,origin=c]{Diagrams/deployment_diagram.png}
+    \caption{Deployment diagram}
+    \label{deployment_diagram}
+\end{figure}
+
 \subsection{Component interfaces}
 \subsection{Runtime view}
 \subsection{Selected architectural styles and patterns}
