added some sw qualities and typos fix

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -2,7 +2,7 @@
 Traditional classroom teaching focuses heavily on theory and concepts, without providing sufficient opportunities for students to gain hands-on coding experience.
 Additionally, the student-instructor relationship is usually limited to formal lectures and exams, missing some kind of continuous evaluation, which is essential to stimulate learning.
 
-CodeKataBattle aims to fill these gaps by facilitating competitive programming challenges that motivate students to put concepts into practice. The aim of the product is to provide an alternative to evaluate students with respect to their coding skills in a more enjoyable way: this is achieved by allowing educators to create tournaments in which students can partecipate and compete. Through integration with static analysis tools, the automated scoring system provides reliable evaluation so students can measure their improvements. By collaborating in teams, they also learn key skills like communication and source control. Indeed, partecipating to battles, students will gain experience in using GitHub as source control system.
+CodeKataBattle aims to fill these gaps by facilitating competitive programming challenges that motivate students to put concepts into practice. The aim of the product is to provide an alternative to evaluate students with respect to their coding skills in a more enjoyable way: this is achieved by allowing educators to create tournaments in which students can partecipate and compete. Through the integration with static analysis tools, the automated scoring system provides reliable evaluation so students can measure their improvements. By collaborating in teams, they also learn key skills like communication and source control. Indeed, partecipating to battles, students will gain experience in using GitHub as source control system.
 
  These kind of evaluation also teaches how the test-first approach can be useful when it comes to developing a new piece of software.
 
@@ -101,11 +101,11 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \item {\textbf{Student:} the first kind of users and, basically, the people this product is designed for. Their objective is to submit solutions to battles}
     \item {\textbf{Team:} students can decide to group up and form a team to partecipate to a battle. The score assigned to the submission of a team will be assigned also to each one of its members}
     \item {\textbf{Educator:} the second kind of users. They create tournaments, set-up battles, and eventually, evaluate the solutions that teams of students have submitted during the challenge}
-    \item {\textbf{Tournament:} collection of coding exercises (battles) about specific topics of a subject. Interested students can subscribe to it and participate to its battles as soon as they are published}
+    \item {\textbf{Tournament:} collection of coding exercises (battles). Interested students can subscribe to it and participate to its battles as soon as they are published}
     \item {\textbf{Code Kata Battle (or battle):} the atomic unit of a tournament. Usually students are asked to implement an algorithm or to develope a simple project that solves the task. Each battle belongs to a specific tournament: students submitting solutions for a battle will obtain a score that will be used to compute both the team's rank for the battle and the members' tournament rank}
     \item {\textbf{Code Kata:} description and software project necessary for the battle, including test cases and build automation scripts. These are uploaded by the educator at battle creation time}
     \item {\textbf{Tournament collaborator:} other educator that is added by the tournament creator to help him in the management of the tournament. He can create battles and evaluate their submissions}
-    \item {\textbf{GitHub:} web-based hosting service for version control, mostly used for computer code. It offers both distributed version control and source code management functionalities}
+    \item {\textbf{GitHub:} web-based hosting service for version control, mostly used for programming. It offers both distributed version control and source code management functionalities}
     \item {\textbf{GitHub repository:} a repository is a storage space where some project files are stored. It can be either public or private. In the context of the platform, each battle is associated with a GitHub repository that is created by the system and shared with the teams}
     \item {\textbf{GitHub collaborator:} person who is granted access to a GitHub repository with write permission}
     \item {\textbf{GitHub Actions:} GitHub feature that allows to automate tasks directly on GitHub, such as building and testing code, or deploying applications. In the context of the platform, GitHub Actions is used to automatically notify the system when a new submission is pushed to the repository of a team}
@@ -156,7 +156,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
 \subsection{Document Structure}
 \begin{itemize}
     \item {\textbf{Section 1: Introduction}\\This section offers a brief overview of the product and its purpose. It also contains the list of definitions, acronyms and abbreviations that could be found in this document.}
-    \item {\textbf{Section 2: Overall Description}\\The second chapter contains some scenarios to better understand the expected functionalities and offers a more detailed description of the product domain through state machine diagrams and UML class diagram. It contains also the hardware and the software costraints of the system. Finally, there is an overview of
+    \item {\textbf{Section 2: Overall Description}\\The second chapter contains some scenarios to better understand the expected functionalities and offers a more detailed description of the product domain through state machine diagrams and UML class diagram. It contains also the hardware and the software constraints of the system. Finally, there is an overview of
      all the product features and the actors they are built for. }
     \item {\textbf{Section 3: Specific Requirements}\\This section contains a description of functional requirement through some use cases and activity diagrams.}
     \item {\textbf{Section 4: Formal Analysis through Alloy}\\The fourth chapter is a formal analysis of the model, made through the Alloy, including a graphic
