--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -1176,5 +1176,10 @@ The platform should be intuitive and minimal, still offering all the functionali
     \item Deploy firewalls to protect the system from unauthorized access.
     \item Employ API authentication mechanism to limit access to the API.
 \end{itemize}
+\subsubsection{Maintainability}
+The system should be designed to be easily maintained and updated, allowing also new functionalities to be added in future. This can be achieved by adopting a modular architecture, which permits to easily replace or update components without affecting the overall system. The most important aspects related to maintainability and modularity will be addressed in the design document.
+\subsubsection{Portability}
+Since the platform is web-based, it will be accessible from any device equipped with a modern web browser. For this reason, the system interface should be responsive and usable on different screen sizes, also on mobile devices.
+
 \subsubsection{Scalability}
 The system should be designed to easily scale horizontally to accommodate growth in traffic.
