started description of deployment diagram

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -114,7 +114,9 @@ The Figure \ref{component_diagram} contains also some external entities the syst
 
 \newpage
 \subsection{Deployment view}
-TODO
+The following diagram represents the deployment architecture of the system, highlighting the physical nodes on which the system will be deployed and the communication channels between them.
+
+In Figure \ref{deployment_diagram} the nodes have been colored according to the color scheme defined in the component view exception, with the only difference that the \textcolor{red}{red} color has been used to identify the user's web browser and the \textcolor{yellow}{yellow} one to represent the system's web server.
 \begin{figure}[H]
     \centering
     \vspace{-4cm}
