--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -18,6 +18,10 @@
   \renewcommand{\footrulewidth}{0.4pt}
 }
 
+% Personalized colors
+\usepackage[dvipsnames]{xcolor}
+\definecolor{mycolor}{rgb}{0.858, 0.188, 0.478}
+
 \usepackage{graphicx}
 \usepackage[T1]{fontenc}
 \usepackage{tocloft}
